[package]
name = "pathutils"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
regex = { version = "^1.1", optional = true }
lazy_static = { version = "^1.2", optional = true}

[dev-dependencies]
criterion = "0.2"

[features]
default = []
glob = ["regex", "lazy_static"]

[[bench]]
name = "join"
harness = false

[[example]]
name = "resolve"
path = "example/resolve.rs"